# mandelbrot-wasm

./: Cargo.toml  README.md  index.html
pkg/: mandelbrot_wasm.d.ts  mandelbrot_wasm.js  mandelbrot_wasm_bg.js  mandelbrot_wasm_bg.wasm  mandelbrot_wasm_bg.wasm.d.ts  package.json
src/: lib.rs
