[package]
name = "mandelbrot-wasm"
version = "0.1.0"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "HtmlInputElement", "HtmlButtonElement", "ImageData", "Performance"] }
log = "0.4"
console_log = "0.2"
console_error_panic_hook = "0.1.7"
js-sys = "0.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
